# content_intel

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/commands/: build-phase.md  verify.md
.claude/skills/prompt-fixture-test/: SKILL.md
agent_docs/: _starter_prompt.md  ai_pipeline.md  architecture.md  build_order.md  cowork_workflow.md  data_model.md  data_sources.md  deployment.md  frontend.md
backend/alembic/: env.py
backend/alembic/versions/: 0fd7b183b5d9_initial_schema.py  ebf99fbee796_add_export_sync_logs.py
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/ai/: __init__.py  classifier.py  drafter.py  lead_extractor.py  summarizer.py
backend/app/exporters/: drive_client.py  gdocs.py  gsheets.py
backend/app/routers/: drafts.py  export.py  feed.py  leads.py  sync.py
backend/app/services/: ingest.py  lead_scorer.py
backend/app/sources/: hackernews.py  reddit.py
backend/scripts/: backfill.py  google_auth.py
backend/tests/: test_classifier.py
backend/tests/fixtures/: sample_posts.json
backend/tests/scripts/: try_prompt.py
dashboard/: package.json  pnpm-lock.yaml
dashboard/app/: actions.ts  layout.tsx  page.tsx
dashboard/app/drafts/: page.tsx
dashboard/app/drafts/new/: page.tsx
dashboard/app/leads/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/components/: DraftGenerator.tsx  DraftList.tsx  FeedCard.tsx  LeadTable.tsx  SettingsClient.tsx  SyncButton.tsx
dashboard/lib/: api.ts  user.ts
