[project]
name = "content-intel"
version = "0.1.0"
description = "Reddit + HN -> classified leads + LinkedIn drafts via two-tier Gemini pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "asyncpraw>=7.8",
    "httpx>=0.27",
    "google-genai>=0.3",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",  # for TestClient
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]  # line length is the formatter's problem

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend/app"]