[project]
name = "content-intel"
version = "0.1.0"
description = "Reddit + HN -> curated content + leads. Pipeline (Python) + Dashboard (Next.js). v1 local SQLite, v2 Supabase + Vercel."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.17.0",
    "asyncpg>=0.30",            # v2: Postgres async driver
    "alembic>=1.13",
    "httpx>=0.27",
    "google-genai>=0.3",
    "google-api-python-client>=2.140",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "pyjwt[crypto]>=2.9",       # v2: JWT verification for Supabase Auth
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend/app"]